tests/miniJava/neg/001267_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new if [ 0 ] ; } }
